Inject media download rows into bottom sheets
Refactor bottom-sheet hooks and add a full MediaDownloadButtonHook.

- Simplified and hardened DexKit hook in BottomSheetHookUtil for InstagramMainActivity, retained setupHooks/ghost emoji call.
- Reworked bottom-sheet hooking: directly hook BottomSheetDialogFragment.onViewCreated, BottomSheetDialog.setContentView and AppCompatDialog.setContentView to receive the sheet root view and inject rows without expensive tree scans; added logging and feature-flag checks.
- Replaced old injection call with injectIntoSheetView(View, Activity) so the actual sheet root is used.

- Replaced previous MediaDownloadUtils with MediaDownloadButtonHook (moved package to ps.reso.instaeclipse.mods.media):
  - Captures current media model via View.setTag hooks to obtain media id/type.
  - Fetches Instagram private API /info/ JSON, parses best image/video URLs (carousel support), and downloads files.
  - Saves media using MediaStore on Android Q+ and legacy storage fallback; handles permissions and shows toasts.
  - Builds native sheet rows (Download / Download All) and injects them into the sheet container.
  - Adds robust error handling, logging, and uses an executor pool for downloads.

Overall: improves reliability of injecting download actions into various sheet implementations and implements the full download flow (network, parsing, storage, UI).